--- a/SM/Homework 7/defs.tex
+++ b/SM/Homework 7/defs.tex
@@ -1,9 +1,9 @@
 \usepackage[T1]{fontenc}
 \usepackage{amsmath,amsthm,amsfonts,amssymb,amscd}
 \usepackage[lining,semibold,scaled=1.05]{ebgaramond}     
-\usepackage{ebgaramond-maths}
- %\usepackage[cmintegrals,cmbraces]{newtxmath}
+%\usepackage[cmintegrals,cmbraces]{newtxmath}
 % Use FUCKING GARAMOND
+\usepackage[ebgaramond]{newtxmath}
 \usepackage{graphicx}           
 % Enhanced support for images
 \usepackage{float}              
