--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -61,6 +61,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 				\hline
 			\end{tabular}
 			\caption{Service time distribution schema for the first and second queue.}
+			\label{table1}
 		\end{table}
 	in which we can easily notice we are in the bottom-right case, in which the service times of both the queue are negative-exponential.\\
 	Technically every departure could be a regeneration point but since our analysis focuses on the average waiting time of the long repair station we chose as regeneration points all the departures from the long station. 
@@ -626,6 +627,12 @@ The error is the 9.992779% of the point estimate.
 \end{verbatim}
 The average waiting time still suffers from some variability, but the confidence interval most of the times includes the expected value of 1811.030708 minutes. If we let the simulation run for longer times (for example by letting the simulator iterate until the \path{MAX_EVENT} number of iterations is reached) the average waiting time gets closer and closer to the numerically derived value.
 \section{Exercise 2}
+In this exercise we keep the main bulk of the simulator and we switch the distribution of the long service times with an hyper-exponential distribution:
+\begin{equation*}
+	f_{X}(x) = \alpha_1\cdot\frac{1}{\mu_1}\cdot e^{-\frac{x}{\mu_1}}+\alpha_2\cdot\frac{1}{\mu_2}\cdot e^{-\frac{x}{\mu_2}}.
+\end{equation*}
+This is a \textit{mixture distribution} 
+What about the regeneration point? According to the table \ref{table1} we are now in the case with a first Markovian/Exponential queue and a second generic distribution queue. This means that \textit{any departure from the second server} is a valid regeneration point, so we can keep our occurrence of \verb*|'L'| events as our regeneration point.
 	The simulation gives the following results:
 	
 	\noindent\textbf{Station 0 Results:}
