--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -664,7 +664,7 @@ double hyperexponential_random(int k, double* alpha, double* heta) {
 \end{lstlisting}
 The main mechanism here lies in the fact that the \rv{} $Y\sim\mathsf{Unif}(0,1)$ finds which exponential distribution (in this case, out of 2) we must draw the random number from. In this case our parameters are:
 \begin{itemize}
-	\item $\mu_1=10\;\mathrm{math}$ with weight $\alpha_1=0.95$;
+	\item $\mu_1=10\;\mathrm{mins}$ with weight $\alpha_1=0.95$;
 	\item $\mu_2=19010\;\mathrm{mins}$ with weight $\alpha_1=0.05$.
 \end{itemize}
 	The simulation gives the following results:
