--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -667,9 +667,9 @@ The main mechanism here lies in the fact that the \rv{} $Y\sim\mathsf{Unif}(0,1)
 	\item $\mu_1=10\;\mathrm{mins}$ with weight $\alpha_1=0.95$;
 	\item $\mu_2=19010\;\mathrm{mins}$ with weight $\alpha_1=0.05$.
 \end{itemize}
-The expected value of the hyperexponential distribution is straightforward to compute: when we have $X\sim\mathsf{HyperExp}(\mathbf{\alpha},\mathbf{\mu})$
+The expected value of the hyperexponential distribution is straightforward to compute: when we have $X\sim\mathsf{HyperExp}(\mathbf{\alpha},\mathbf{\mu})$, then
 \begin{equation*}
-	\ev[X]
+	\ev[X]=\sum_{i=1}^{k}\alpha_i\eta_i.
 \end{equation*}
 	The simulation gives the following results:
 	
