txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -671,6 +671,10 @@ The expected value of the hyperexponential distribution is straightforward to co
 \begin{equation*}
 	\ev[X]=\sum_{i=1}^{k}\alpha_i\eta_i.
 \end{equation*}
+In this case, given our parameters, we will have
+\begin{equation*}
+	\ev[X]=0.95\cdot 10+0.05\cdot19010=960\text{ mins}.
+\end{equation*}
 	The simulation gives the following results:
 	
 	\noindent\textbf{Station 0 Results:}
