txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -675,6 +675,7 @@ In this case, given our parameters, we will have
 \begin{equation*}
 	\ev[X]=0.95\cdot 10+0.05\cdot19010=960\text{ mins}.
 \end{equation*}
+The expected value of the distribution of the times of the long station is the same both in this case and in the previous exercise.
 	The simulation gives the following results:
 	
 	\noindent\textbf{Station 0 Results:}
