--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -676,5 +676,5 @@ In this case, given our parameters, we will have
 	\ev[X]=0.95\cdot 10+0.05\cdot19010=960\text{ mins}.
 \end{equation*}
 The expected value of the distribution of the times of the long station is the same both in this case and in the previous exercise. \\
-Before trying to simulate the behavior of the system with this modification, we can use our Mean Value Analysis code from the 
+Before trying to simulate the behavior of the system with this modification, we can use our Mean Value Analysis code from the homework 4 to have a numerical idea of what we should expect. 
 \end{document}
