txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -678,6 +678,6 @@ In this case, given our parameters, we will have
 \end{equation*}
 The expected value of the distribution of the times of the long station is the same both in this case and in the previous exercise. \\
 \subsection{The Mean Value Analysis}
-Before trying to simulate the behavior of the system with this modification, we can use our Mean Value Analysis code from the homework 4 to have a numerical idea of what we should expect.\\
-The MVA is not techni
+Before trying to simulate the behavior of the system with this modification, we can use our Mean Value Analysis (``\verb*|MVA_LI&D|'') code from the homework 4 to have a numerical idea of what we should expect.\\
+The MVA can provide measures for average waiting times, throughput and itilizations
 \end{document}
