--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -679,5 +679,5 @@ In this case, given our parameters, we will have
 The expected value of the distribution of the times of the long station is the same both in this case and in the previous exercise. \\
 \subsection{The Mean Value Analysis}
 Before trying to simulate the behavior of the system with this modification, we can use our Mean Value Analysis (``\verb*|MVA_LI&D|'') code from the homework 4 to have a numerical idea of what we should expect.\\
-The MVA can provide measures for average waiting times, throughput and utilizations for a closed system with both load independent and delay stations. The difference, in our case, is that the arrival and service times are not anymore fixed quantities but rather \rv s.
+The MVA can provide measures for average waiting times, throughput and utilizations for a closed system with both load independent and delay stations. The difference, in our case, is that the arrival and service times are not anymore fixed quantities but rather \rv s; since MVA is based on averages, though, we can do a little tweak of the system by substituting each \rv{} with its expected value. This allows us to feed into the MVA algorithm a system with 
 \end{document}
