txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -683,14 +683,16 @@ The MVA can provide measures for average waiting times, throughput and utilizati
 \begin{itemize}
 	\item $M=3$ stations;
 	\item $N=10$ customers in the system;
-	\item time of output of the delay station $Z=3000$ (we can imagine, since all machines break in the same moment in this scenario, that they leave the delay station sequentially);
+	\item time of output of the delay station $Z=3000$ mins (we can imagine, since all machines break in the same moment in this scenario, that they leave the delay station sequentially);
 	\item routing matrix
 	\begin{equation*}
 		\begin{bmatrix}
 			0&1&0\\
 			0.8&0&0.2\\
 			1&0&0
-		\end{bmatrix}
+		\end{bmatrix};
 	\end{equation*}
+	\item service time of the short repair station $S_1=40$ mins;
+	\item service time of the long repair station $S_2=960$ mins.
 \end{itemize}
 \end{document}
