--- a/SM/Homework 7/defs.tex
+++ b/SM/Homework 7/defs.tex
@@ -1,3 +1,4 @@
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath,amsthm,amsfonts,amssymb,amscd}
 \usepackage[lining,semibold,scaled=1.05]{ebgaramond}     
