txs auto checkin

--- a/SM/Homework 7/defs.tex
+++ b/SM/Homework 7/defs.tex
@@ -1,5 +1,6 @@
-\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage[italian]{babel}
 \usepackage{amsmath,amsthm,amsfonts,amssymb,amscd}
 \usepackage[lining,semibold,scaled=1.05]{ebgaramond}     
 %\usepackage[cmintegrals,cmbraces]{newtxmath}
