--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -698,7 +698,7 @@ The MVA can provide measures for average waiting times, throughput and utilizati
 As we see here, since both the exponential and the hyper-exponential distributions have the same expected value of 960 mins, the MVA procedure makes no difference between them. Here is the code of the MVA analysis (taken from our previous homework):
 \begin{lstlisting}
 /* -------------------------------------------------------------------------
-Università di Torino
+Universita' di Torino
 M.S. in STOCHASTICS AND DATA SCIENCE
 Course in Simulation
 Homework 7
