txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -800,5 +800,32 @@ int main() {
 	}
 	return 0;
 }
-\end{lstlisting}
+\end{lstlisting} 
+This produces the following output:
+\begin{verbatim}
+-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
+
+Simulation with 10 customers
+
+Station 0 results:
+Throughput (X[10])              = 0.002935
+Utilization (U[10])             = 0.880562
+Mean queue length (n[10])       = 8.805621
+Mean waiting time (w[10])       = 3000.000000
+Mean response time (R_0)                = 406.914799
+
+Station 1 results:
+Throughput (X[10])              = 0.002935
+Utilization (U[10])             = 0.117408
+Mean queue length (n[10])       = 0.131229
+Mean waiting time (w[10])       = 44.708658
+Mean response time (R_0)                = 84.708658
+
+Station 2 results:
+Throughput (X[10])              = 0.000587
+Utilization (U[10])             = 0.563560
+Mean queue length (n[10])       = 1.063150
+Mean waiting time (w[10])       = 1811.030708
+Mean response time (R_0)                = 2771.030708
+\end{verbatim}
 \end{document}
