--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -802,7 +802,7 @@ int main() {
 }
 \end{lstlisting} 
 This produces the following output:
-\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
 -*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
 
 Simulation with 10 customers
@@ -825,7 +825,7 @@ Station 2 results:
 Throughput (X[10])              = 0.000587
 Utilization (U[10])             = 0.563560
 Mean queue length (n[10])       = 1.063150
-\textcolor{Mean waiting time (w[10])       = 1811.030708}{red}
+\textcolor{red}{Mean waiting time (w[10])       = 1811.030708}
 Mean response time (R_0)                = 2771.030708
-\end{verbatim}
+\end{Verbatim}
 \end{document}
