txs auto checkin

--- a/SM/Homework 7/defs.tex
+++ b/SM/Homework 7/defs.tex
@@ -26,7 +26,8 @@
 % Typeset programs (programming code) within LaTeX
 \usepackage{lastpage}           
 % Reference last page for Page N of M type footers.
-\usepackage{fancyhdr}                   
+\usepackage{fancyhdr}    
+\usepackage{fancyvrb}               
 % Cross-referencing 
 \usepackage[small,bf]{caption}  
 % Captions
