txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -802,7 +802,7 @@ int main() {
 }
 \end{lstlisting} 
 This produces the following output:
-\begin{Verbatim}[commandchars=\\\{\}]
+\begin{verbatim}
 -*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
 
 Simulation with 10 customers
@@ -825,7 +825,8 @@ Station 2 results:
 Throughput (X[10])              = 0.000587
 Utilization (U[10])             = 0.563560
 Mean queue length (n[10])       = 1.063150
-\textcolor{red}{Mean waiting time (w[10])       = 1811.030708}
+Mean waiting time (w[10])       = 1811.030708
 Mean response time (R_0)                = 2771.030708
-\end{Verbatim}
+\end{verbatim}
+As we can see, the mean waiting time of the station 2 (the long repair station) is really close to the numerical estimation given by the homework request. Again, there is no difference in the eyes of the MVA between this case with the hyper-exponential distribution and the previous case with the exponential distribution.
 \end{document}
