txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -829,4 +829,5 @@ Mean waiting time (w[10])       = 1811.030708
 Mean response time (R_0)                = 2771.030708
 \end{verbatim}
 As we can see, the mean waiting time of the station 2 (the long repair station) is really close to the numerical estimation given by the homework request. Again, there is no difference in the eyes of the MVA between this case with the hyper-exponential distribution and the previous case with the exponential distribution.
+\subsection{The simulation}
 \end{document}
