txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -892,4 +892,14 @@ if (coin_flip <= beta) {
 	time_events_product_long += waiting_time_long * 1;
 }
 \end{lstlisting}
+After running the simulation, a typical output will look like this:
+\begin{verbatim}
+Stopping conditions reached at the 112663-th iteration
+_______________________________________
+Simulation complete! :) Execution time: 0.018000 seconds
+Total cycles: 10207.
+Average waiting time for the long station: 5599.523262
+Confidence interval at 10%: (5319.665321,5879.381202).
+The error is the 9.995777% of the point estimate.
+\end{verbatim}
 \end{document}
