--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -902,5 +902,5 @@ Average waiting time for the long station: 5599.523262
 Confidence interval at 10%: (5319.665321,5879.381202).
 The error is the 9.995777% of the point estimate.
 \end{verbatim}
-Here the point estimate is tragically higher than the expected value in the previous exercise and than what the MVA suggested.
+Here the point estimate is tragically higher than the expected value in the previous exercise and than what the MVA suggested. A possible explanation of this fact may lie in the \emph{different variances} of the two distributions:
 \end{document}
