txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -904,6 +904,7 @@ The error is the 9.995777% of the point estimate.
 \end{verbatim}
 Here the point estimate is tragically higher than the expected value in the previous exercise and than what the MVA suggested. A possible explanation of this fact may lie in the \emph{different variances} of the two distributions: the exponential distribution has variance
 \begin{equation*}
-	\var[X]=\frac{1}{\lambda^{2}}
+	\var[X]=\eta^{2}\implies\var[Y]=960^{2}=921600
 \end{equation*}
+while for the hyperexponential distribution
 \end{document}
