txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -906,5 +906,5 @@ Here the point estimate is tragically higher than the expected value in the prev
 \begin{equation*}
 	\var[X]=\eta^{2}\implies\var[Y]=960^{2}=921600
 \end{equation*}
-while for the hyperexponential distribution
+while for the hyperexponential distribution we have to calculate the second moment $\ev[X^{2}]=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2$
 \end{document}
