--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -906,5 +906,9 @@ Here the point estimate is tragically higher than the expected value in the prev
 \begin{equation*}
 	\var[X]=\eta^{2}\implies\var[Y]=960^{2}=921600
 \end{equation*}
-while for the hyperexponential distribution we have to calculate the second moment $\ev[X^{2}]=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2$
+while for the hyperexponential distribution we have to calculate the second moment $\ev[X^{2}]=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2$:
+\begin{align*}
+	\var[X]&=\ev[X^{2}]-(\ev[X])^{2}\\
+	&=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2-\left(\sum_{i=1}^{k}\alpha_i\eta_i\right)^{2}
+\end{align*}
 \end{document}
