txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -909,6 +909,7 @@ Here the point estimate is tragically higher than the expected value in the prev
 while for the hyperexponential distribution we have to calculate the second moment $\ev[X^{2}]=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2$:
 \begin{align*}
 	\var[X]&=\ev[X^{2}]-(\ev[X])^{2}\\
-	&=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2-\left(\sum_{i=1}^{k}\alpha_i\eta_i\right)^{2}
+	&=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2-\left(\sum_{i=1}^{k}\alpha_i\eta_i\right)^{2}\\
+	&=2\cdot\left(0.95*10^{2}+0.05*19010^2\right)
 \end{align*}
 \end{document}
