txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -910,6 +910,7 @@ while for the hyperexponential distribution we have to calculate the second mome
 \begin{align*}
 	\var[X]&=\ev[X^{2}]-(\ev[X])^{2}\\
 	&=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2-\left(\sum_{i=1}^{k}\alpha_i\eta_i\right)^{2}\\
-	&=2\cdot\left(0.95*10^{2}+0.05*19010^2\right)
+	&=2\cdot\left(0.95*10^{2}+0.05*19010^2\right)-960\\
+	&=36137240\text{ mins}^2
 \end{align*}
 \end{document}
