--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -904,13 +904,13 @@ The error is the 9.995777% of the point estimate.
 \end{verbatim}
 Here the point estimate is tragically higher than the expected value in the previous exercise and than what the MVA suggested. A possible explanation of this fact may lie in the \emph{different variances} of the two distributions: the exponential distribution has variance
 \begin{equation*}
-	\var[X]=\eta^{2}\implies\var[Y]=960^{2}=921600
+	\var[X]=\eta^{2}\implies\var[Y]=960^{2}=921600\text{ mins}^2.
 \end{equation*}
 while for the hyperexponential distribution we have to calculate the second moment $\ev[X^{2}]=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2$:
 \begin{align*}
 	\var[X]&=\ev[X^{2}]-(\ev[X])^{2}\\
 	&=2\sum_{i=1}^{k}\alpha_{i}\eta_i^2-\left(\sum_{i=1}^{k}\alpha_i\eta_i\right)^{2}\\
 	&=2\cdot\left(0.95*10^{2}+0.05*19010^2\right)-960\\
-	&=36137240\text{ mins}^2
+	&=36137240\text{ mins}^2.
 \end{align*}
 \end{document}
