txs auto checkin

--- a/SM/Homework 7/main.tex
+++ b/SM/Homework 7/main.tex
@@ -913,4 +913,5 @@ while for the hyperexponential distribution we have to calculate the second mome
 	&=2\cdot\left(0.95*10^{2}+0.05*19010^2\right)-960\\
 	&=36137240\text{ mins}^2.
 \end{align*}
+This is more than 40 times the variance of the exponential distribution: most of the times, a small waiting time for the repair of the long station gets chosen and the queue flows quickly; when the other distribution (with a very large parameter) prevails, though, the catastrophic service time makes the queue extremely slow for all the customers in the queue, affecting all their waiting times.
 \end{document}
