--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -15,7 +15,7 @@
 \usepackage[a4paper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
 % Useful packages
-\usepackage[cmintegrals,cmbraces]{newtxmath}
+\usepackage[cmintegrals,cmbraces,ncf]{newtxmath}
 %\usepackage{ebgaramond-maths}
 
 \usepackage{bbding}
